# fullstack_mastering

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
docs/: structure.md
src/: app.py
src/config/: settings.py
src/extensions/: __init__.py  auth.py  cache.py  db.py  limiter.py  metrics.py  migrate.py
tests/: test_health.py
