[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fullstack_mastering"
version = "0.1.0"
description = "Pazar yeri e-ticaret backend (Flask) - öğrenme odaklı"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "flask==3.0.3",
  "flask-sqlalchemy==3.1.1",
  "SQLAlchemy==2.0.36",
  "alembic==1.13.2",
  "flask-migrate==4.0.7",
  "psycopg[binary]==3.2.1",
  "flask-cors==4.0.0",
  "flask-talisman==1.1.0",
  "flask-limiter==3.8.0",
  "redis==5.0.8",
  "authlib==1.3.1",
  "flask-jwt-extended==4.6.0",
  "marshmallow==3.21.3",
  "passlib[bcrypt]==1.7.4",
  "structlog==24.4.0",
  "opentelemetry-sdk==1.27.0",
  "opentelemetry-instrumentation-flask==0.48b0",
  "prometheus-client==0.21.0",
  "celery==5.4.0",
  "kombu==5.4.0",
  "requests==2.32.3",
  "httpx==0.27.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "factory-boy==3.3.1",
  "faker==30.8.1",
  "ruff==0.6.9",
  "black==24.8.0",
  "isort==5.13.2",
  "mypy==1.11.2",
  "pre-commit==3.8.0",
  "types-requests",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]